--- a/.github/workflows/profile-3d.yml
+++ b/.github/workflows/profile-3d.yml
@@ -19,7 +19,8 @@ jobs:
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
-          git pull
+          git fetch origin
+          git pull --rebase origin main
           git add -A .
           git commit -m "generated"
           git push
